--- a/NotiExample/Info.plist
+++ b/NotiExample/Info.plist
@@ -19,5 +19,19 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SFUIText-Bold.ttf</string>
+		<string>SFUIText-BoldItalic.ttf</string>
+		<string>SFUIText-HeavyItalic.ttf</string>
+		<string>SFUIText-Light.ttf</string>
+		<string>SFUIText-LightItalic.ttf</string>
+		<string>SFUIText-Medium.ttf</string>
+		<string>SFUIText-MediumItalic.ttf</string>
+		<string>SFUIText-Regular.ttf</string>
+		<string>SFUIText-RegularItalic.ttf</string>
+		<string>SFUIText-SemiBold.ttf</string>
+		<string>SFUIText-SemiBoldItalic.ttf</string>
+	</array>
 </dict>
 </plist>
